# routes/admin.route.js
@@ -4,6 +4,6 @@ const { authAdmin } = require('../middlewares/auth');
 module.exports = (router) => {
     router.post('/admin/register', controller.addAdmin);
     router.post('/admin/login', controller.adminLogin);
-    router.post('/add/employer', authAdmin, controller.addEmployer);
+    router.post('/employer/add', authAdmin, controller.addEmployer);
 };
 
